@@ -84,7 +84,6 @@ class ZMController extends ZMObject {
         $view = null;
 
         // session validation
-        // XXX: move to mvc?
         if ($this->isFormSubmit($request) && null != ($view = $this->validateSession($request))) {
             ZMLogging::instance()->log('session validation failed returning: '.$view, ZMLogging::TRACE);
         }
@@ -261,16 +260,7 @@ class ZMController extends ZMObject {
      * @return ZMView Either the error view (in case of validation errors), or <code>null</code> for success.
      */
     protected function validateSession($request) {
-        $valid = true;
-        if (ZMLangUtils::inArray($this->getId(), ZMSettings::get('zenmagick.mvc.html.tokenSecuredForms'))) {
-            $valid = false;
-            //XXX: fix
-            if (null != ($token = $request->getParameter(Session::TOKEN_NAME))) {
-                $valid = $request->getSession()->getToken() == $token;
-            }
-        }
-
-        return $valid ? null : $this->findView();
+        return $request->validateSessionToken() ? null : $this->findView();
     }
 
     /**
