@@ -53,8 +53,7 @@ class ZMToolboxNet extends ZMToolboxTool {
         if (null === $requestId || null === $params) {
             $query = $this->getRequest()->getParameterMap();
             unset($query[ZM_PAGE_KEY]);
-            //XXX:??
-            unset($query[zen_session_name()]);
+            unset($query[$request->getSession()->getName()]);
             if (null != $params) {
                 parse_str($params, $arr);
                 $query = array_merge($query, $arr);
